@@ -1,5 +1,4 @@
 EXTRA_DIST = nested_formats.texi \
- generate_all_texi.pl \
  tests-parser.txt res_parser res_parser_info
 
 DISTCLEANFILES = tests.log tests.out
